// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component FileUploader should render correctly without any setup 1`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files 1`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files 2`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={false}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files 3`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={true}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={false}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files 4`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={true}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with access required 1`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with access required 2`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={true}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with access required 3`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={true}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "access_condition_id": 8,
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={true}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "access_condition_id": 8,
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with access required 4`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={true}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "access_condition_id": 9,
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={true}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "access_condition_id": 9,
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
    <div
      className="open-access-checkbox error-checkbox"
      style={
        Object {
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <Checkbox
        checked={false}
        disabled={false}
        label="I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators."
        labelPosition="right"
        onCheck={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with access required 5`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={true}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "access_condition_id": 9,
          "date": "10/10/2017",
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={false}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={true}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "access_condition_id": 9,
          "date": "10/10/2017",
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={true}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
    <div
      className="open-access-checkbox error-checkbox"
      style={
        Object {
          "position": "relative",
          "width": "100%",
        }
      }
    >
      <Checkbox
        checked={false}
        disabled={false}
        label="I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators."
        labelPosition="right"
        onCheck={[Function]}
      />
    </div>
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with default access condition based on quick template Id 1`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with default access condition based on quick template Id 2`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "access_condition_id": 3,
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "access_condition_id": 3,
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={true}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={false}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "access_condition_id": 3,
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "access_condition_id": 3,
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with default access condition based on quick template Id 3`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={Array []}
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`Component FileUploader should render rows for uploaded files with default access condition based on quick template Id 4`] = `
<div>
  <h4
    className="sub-title"
  >
    You may add up to 10 files (max 5GB each)
  </h4>
  <FileUploadDropzone
    clearErrors={false}
    disabled={false}
    fileNameRestrictions={/\\^\\(\\?=\\^\\\\S\\*\\$\\)\\(\\?=\\^\\[\\^\\\\\\.\\]\\+\\\\\\.\\[\\^\\\\\\.\\]\\+\\$\\)\\(\\?=\\.\\{1,45\\}\\$\\)\\(\\?!\\(web_\\|preview_\\|thumbnail_\\|stream_\\|fezacml_\\|presmd_\\)\\)\\[a-z\\]\\[a-z\\\\d\\\\-_\\\\\\.\\]\\+/}
    locale={
      Object {
        "accessTermsAndConditions": "I understand that the files indicated above as open access will be submitted as open access and will be made publicly available immediately or will be made available on the indicated embargo date.  All other files submitted will be accessible by UQ eSpace administrators.",
        "errorTitle": "Upload Errors",
        "fileUploadInstruction": <p>
          Click here to select files, or drag files into this area to upload
        </p>,
        "fileUploadRestrictionHeading": <h3>
          File upload restrictions
        </h3>,
        "fileUploadRestrictions": <div>
          Please ensure your files:
          <ul>
            <li>
              begin with a letter and are less than 45 characters long
            </li>
            <li>
              contain only upper and lowercase alphanumeric characters, and underscores
            </li>
            <li>
              have only a single period which precedes the file extension: “.pdf”
            </li>
            <li>
              are uploaded individually and not inside a folder
            </li>
          </ul>
        </div>,
        "instructions": "You may add up to [fileUploadLimit] files (max [maxFileSize][fileSizeUnit] each)",
        "validation": Object {
          "fileName": "File(s) ([filenames]) have invalid file name",
          "folder": "Invalid files ([filenames])",
          "maxFileSize": "File(s) ([filenames]) exceed maximum allowed upload file size",
          "maxFiles": "Maximum number of files ([maxNumberOfFiles]) has been exceeded. File(s) Files ([filenames]) will not be uploaded",
        },
      }
    }
    maxFiles={10}
    maxSize={5000000000}
    onDropped={[Function]}
    uploadedFiles={
      Array [
        Object {
          "name": "a.txt",
          "size": 100,
        },
        Object {
          "name": "b.txt",
          "size": 100,
        },
      ]
    }
  />
  <div
    className="metadata-container"
    style={
      Object {
        "display": "block",
      }
    }
  >
    <FileUploadRowHeader
      defaultAccessConditionIdPresent={true}
      locale={
        Object {
          "deleteAllFiles": "Remove all files from the upload queue",
          "deleteAllFilesConfirmation": Object {
            "cancelButtonLabel": "No",
            "confirmButtonLabel": "Yes",
            "confirmationMessage": "Are you sure you want to delete all files?",
            "confirmationTitle": "Delete all",
          },
          "embargoDateColumn": "Embargo release date",
          "fileAccessColumn": "Access conditions",
          "filenameColumn": "Filename",
        }
      }
      onDeleteAll={[Function]}
      requireOpenAccessStatus={false}
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={0}
      key="a.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "name": "a.txt",
          "size": 100,
        }
      }
    />
    <Connect(FileUploadRow)
      fileSizeUnit="G"
      focusOnIndex={0}
      index={1}
      key="b.txt"
      onAttributeChanged={[Function]}
      onDelete={[Function]}
      requireOpenAccessStatus={false}
      uploadedFile={
        Object {
          "name": "b.txt",
          "size": 100,
        }
      }
    />
  </div>
</div>
`;
